修改了一下code

--- a/word2vec/WordEmbeddingLearn.ipynb
+++ b/word2vec/WordEmbeddingLearn.ipynb
@@ -22011,7 +22011,7 @@
     "  batch, labels = generate_batch(batch_size=8, num_skips=num_skips, skip_window=skip_window)\n",
     "  print('\\nwith num_skips = %d and skip_window = %d:' % (num_skips, skip_window))\n",
     "  print('    batch:', [reverse_dictionary[bi] for bi in batch])\n",
-    "  print('    labels:', [reverse_dictionary[li] for li in labels.reshape(8)])\n"
+    "  print('    labels:', [reverse_dictionary[li] for li in labels.reshape(8)])"
    ]
   },
   {
@@ -22022,13 +22022,13 @@
     {
      "ename": "TypeError",
      "evalue": "reduce_sum() got an unexpected keyword argument 'keepdims'",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-30-e3571087584b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m   \u001b[0;31m# Compute the similarity between minibatch examples and all embeddings.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m   \u001b[0;31m# We use the cosine distance:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m     \u001b[0mnorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msquare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membeddings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m     \u001b[0mnormalized_embeddings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membeddings\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     valid_embeddings = tf.nn.embedding_lookup(\n",
       "\u001b[0;31mTypeError\u001b[0m: reduce_sum() got an unexpected keyword argument 'keepdims'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -22093,7 +22093,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -22105,7 +22107,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -22116,5 +22118,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
