--- a/unit/tersorflow_learning.ipynb
+++ b/unit/tersorflow_learning.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.examples.tutorials.mnist import input_data"
    ]
   },
   {
@@ -149,69 +161,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-11-15c6ba74f28e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-15c6ba74f28e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    上面有两种形式，第一种x，表示输入是一个[1,5]的横向量。\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "上面有两种形式，第一种x，表示输入是一个[1,5]的横向量。 \n",
-    "而第二种形式，表示输入是一个[?,5]的矩阵。那么什么情况下会这么用呢?就是需要输入一批[1,5]的数据的时候。\n",
-    "比如我有一批共10个数据，那我可以表示成[10,5]的矩阵。\n",
-    "如果是一批5个，那就是[5,5]的矩阵。tensorflow会自动进行批处理"
+    "#上面有两种形式，第一种x，表示输入是一个[1,5]的横向量。 \n",
+    "#而第二种形式，表示输入是一个[?,5]的矩阵。那么什么情况下会这么用呢?就是需要输入一批[1,5]的数据的时候。\n",
+    "#比如我有一批共10个数据，那我可以表示成[10,5]的矩阵。\n",
+    "#如果是一批5个，那就是[5,5]的矩阵。tensorflow会自动进行批处理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = np.arange(0,51,10).reshape(6,1) + np.arange(6)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5]\n",
+      " [10 11 12 13 14 15]\n",
+      " [20 21 22 23 24 25]\n",
+      " [30 31 32 33 34 35]\n",
+      " [40 41 42 43 44 45]\n",
+      " [50 51 52 53 54 55]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 建立抽象模型\n",
+    "x = tf.placeholder(tf.float32, [None, 784]) # 输入占位符\n",
+    "y = tf.placeholder(tf.float32, [None, 10])  # 输出占位符（预期输出）\n",
+    "W = tf.Variable(tf.zeros([784, 10]))        \n",
+    "b = tf.Variable(tf.zeros([10]))\n",
+    "a = tf.nn.softmax(tf.matmul(x, W) + b)      # a表示模型的实际输出\n",
+    "\n",
+    "# 定义损失函数和训练方法\n",
+    "cross_entropy = tf.reduce_mean(-tf.reduce_sum(y * tf.log(a), reduction_indices=[1])) # 损失函数为交叉熵\n",
+    "optimizer = tf.train.GradientDescentOptimizer(0.5) # 梯度下降法，学习速率为0.5\n",
+    "train = optimizer.minimize(cross_entropy)  # 训练目标：最小化损失函数"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "correct_prediction = tf.equal(tf.argmax(a, 1), tf.argmax(y, 1))\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "flags = tf.app.flags\n",
+    "FLAGS = flags.FLAGS\n",
+    "flags.DEFINE_string('data_dir', '/tmp/data/', 'Directory for storing data') # 把数据放在/tmp/data文件夹中"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "mnist = input_data.read_data_sets(FLAGS.data_dir, one_hot=True)   # 读取数据集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/michael/.pyenv/versions/3.5.2/lib/python3.5/site-packages/tensorflow/python/util/tf_should_use.py:170: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n",
+      "0.9106\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.InteractiveSession()      # 建立交互式会话\n",
+    "tf.initialize_all_variables().run() # 所有变量初始化\n",
+    "for i in range(1000):\n",
+    "    batch_xs, batch_ys = mnist.train.next_batch(100)    # 获得一批100个数据\n",
+    "    train.run({x: batch_xs, y: batch_ys})   # 给训练模型提供输入和输出\n",
+    "print(sess.run(accuracy,feed_dict={x:mnist.test.images,y:mnist.test.labels}))"
+   ]
   },
   {
    "cell_type": "code",
